--- a/.github/workflows/auto-reading.yml
+++ b/.github/workflows/auto-reading.yml
@@ -1,6 +1,6 @@
 name: Auto Reading Bot
 
-on:
+于:
   # 定时触发 - 每天早上8点和晚上8点执行
   schedule:
     - cron: '0 0 * * *'    # UTC 00:00 = 北京时间 08:00
@@ -20,12 +20,12 @@ on:
       target_duration:
         description: '阅读时长（分钟，格式：10-20。建议：频繁运行时设置5-10分钟，GitHub免费版每月2000分钟额度）'
         required: false
-        default: '15-16'
+        默认: '15-16'
         输入: string
       reading_mode:
         description: '阅读模式'
         required: false
-        default: 'smart_random'
+        默认: 'smart_random'
         输入: choice
         options:
         - smart_random
@@ -66,7 +66,7 @@ jobs:
         reading:
           mode: "${{ github.event.inputs.reading_mode || 'smart_random' }}"
           # 目标阅读时长（分钟），支持区间随机，格式如："1" 或 "1-2"，当前为：1分钟
-          target_duration: "${{ github.event.inputs.target_duration || '22-23' }}"
+          target_duration: "${{ github.event.inputs.target_duration || '23-24' }}"
           reading_interval: "30-48"
           use_curl_data_first: true
           fallback_to_config: true
